<resources>
    <string name="app_name">DoToday</string>
    <string name="add_button">Add Button</string>
    <string name="add_new_list">Add New List</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_to_do">Search To Do</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="add_todo">Add ToDo</string>
    <string name="due_date">Due Date</string>
    <string name="delete">Delete</string>
    <string name="reminder">Reminder</string>
    <string name="sort_by_due_date">Sort By Due Date</string>
    <string name="sort_by_title">Sort By Title</string>
    <string name="show_completed">Show Completed</string>
    <string name="show_unCompleted">Show Uncompleted</string>
    <string name="daily_reminder">Daily Reminder </string>
    <string name="complete_todo">Complete ToDo</string>
    <string name="reminder_alarm_icon">Reminder Alarm Icon</string>
    <string name="sort_by_priority">Sort By Priority</string>
    <string name="filter">Filter</string>
    <string name="rename_worklist">Rename WorkList</string>
    <string name="delete_worklist">Delete WorkList</string>
    <string name="add_new_to_do">Add New To Do</string>
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="you_can_start_by_creating_na_new_to_do">You can start by creating \na new To Do</string>
    <string name="you_can_start_by_creating_na_new_work_list">You can start by creating \na new Work List</string>
    <string name="this_list_is_empty">This List Is Empty</string>
    <string name="eisenhower_matrix">Eisenhower Matrix</string>
    <string name="do_">Do</string>
    <string name="do_icon">Do Icon</string>
    <string name="delagate">Delagate</string>
    <string name="delagate_icon">Delagate Icon</string>
    <string name="eliminate">Eliminate</string>
    <string name="eliminate_icon">Eliminate Icon</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="schedule">Schedule</string>
    <string name="important">Important</string>
    <string name="not_important">Not Important</string>
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="question_icon">Question Icon</string>
    <string name="eisenhower_matris">Eisenhower Matris</string>
</resources>